# ixray-1.6-stcop-sep-26-2024

cmake/windows/: Packages.config  nuget.cmake
gamedata/configs/: engine_external.ltx  mod_system_ixray.ltx
gamedata/configs/ui/: mod_game_tutorials_fade.xml
gamedata/scripts/: smart_terrain.script
gamedata/shaders/d3d11/: common_functions.hlsli  deffer_detail.vs.hlsl  deffer_particle.ps.hlsl  deffer_particle.vs.hlsl  dof.hlsli  fluid_common_render.hlsli  fluid_project.ps.hlsl  particle.ps.hlsl  particle_add.ps.hlsl  rain_layer.ps.hlsl  water.ps.hlsl  water_puddles.ps.hlsl
gamedata/shaders/editor/: deffer_detail.vs.hlsl
gamedata/shaders/r1/: detail_still.vs.hlsl  detail_wave.vs.hlsl
gamedata/shaders/r2/: deffer_detail.vs.hlsl
sdk/libraries/x64/: meshoptimizer.lib
src/: CMakeLists.txt
src/Editors/: CMakeLists.txt
src/Editors/ActorEditor/: PreviewObject.cpp  UIKeyForm.cpp  UIKeyForm.h  UIMainMenuForm.cpp  UI_ActorTools.cpp  UI_ActorToolsMotions.cpp
src/Editors/LevelEditor/: CMakeLists.txt
src/Editors/ParticleEditor/: UIMainMenuForm.cpp
src/Editors/ShaderEditor/: UIMainMenuForm.cpp
src/Editors/xrECore/: CMakeLists.txt  Splash.cpp
src/Editors/xrEUI/: XrUIManager.cpp  XrUIManager.h
src/Include/xrRender/: KinematicsAnimated.h
src/Layers/xrRender/: DetailManager.cpp  DetailManager_Decompress.cpp  DetailManager_VS.cpp  DetailModel.h  ETextureParams.cpp  ETextureParams.h  FSkinned.cpp  HWCaps.cpp  SkeletonAnimated.cpp  SkeletonX.cpp  (+8 more)
src/Layers/xrRenderDS_R0/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/xrForms/: CMakeLists.txt  CompilerIcons.h  CompilersUI.h  CompilersUI_SE7Style.cpp  StartupAI.cpp  StartupDO.cpp  StartupLC.cpp  cl_log.cpp  cl_log.h  xrForms.cpp
src/xrCDB/: ISpatial.cpp  ISpatial.h  ISpatial_q_box.cpp  ISpatial_q_frustum.cpp  ISpatial_q_ray.cpp
src/xrCore/: FS.h  appinfo.h  profiler.h  stack_string.h  xrstring.cpp
src/xrEngine/: Application.cpp  Device_create_render.cpp  EngineExternal.cpp  EngineExternal.h  FDemoRecord.cpp  SkeletonMotions.h  device.h  motion.h
src/xrGame/: Actor.cpp  ActorInput.cpp  CarLights.cpp  CustomMonster.cpp  CustomZone.cpp  CustomZone.h  Entity.cpp  FRbmkAgentManagerPlanner.cpp  FRbmkAgentManagerPlanner.h  GameObject.h  GamePersistent.cpp  Inventory.cpp  InventoryOwner.h  Level.cpp  Level_input.cpp  PhysicObject.cpp  ShootingObject.cpp  ShootingObject.h  Spectator.cpp  UIGameCustom_script.cpp  VoiceChat.h  Weapon.cpp  WeaponAmmo.cpp  WeaponMagazined.cpp  WeaponMagazinedWGrenade.cpp  WeaponStatMgun.cpp  WeaponStatMgunFire.cpp  alife_simulator_script.cpp  alife_storage_manager.cpp  alife_update_manager.cpp  console_commands.cpp  damage_manager.cpp  doors_door.cpp  encyclopedia_article.cpp  inventory_item.cpp  inventory_owner_info.cpp  level_script.cpp  memory_manager.h  memory_manager_inline.h  ph_shell_interface.h  (+9 more)
src/xrPlay/: Splash.cpp  Splash.h  xrPlay.cpp
src/xrScripts/: script_engine_script.cpp  script_storage.h  script_thread.cpp  script_thread.h
src/xrServer/: CMakeLists.txt
src/xrServerEntities/: inventory_space.h
(+136 files in other folders)
